--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@ function closeNav() {
 <!--Footer-->
 	<div class="footer-copyright py-4">
 		<div class="container">
-		<p><img src="https://avatars.githubusercontent.com/u/159365921" title="Valodoka Games" alt="Valodoka Games logo"> 	Valodoka Games			</p><span class="dsb-panel">
+		<p><img src="https://avatars.githubusercontent.com/u/159365921" title="Valodoka Games" alt="Football.X Games logo"> 	Football.X Games			</p><span class="dsb-panel">
 				<a href="/term.html">Term</a> - <a href="/dmca.html">DMCA</a> - <a href="/policy.html">Policy</a>			</span>
 		</div>
 	</div>
